--- a/src/Styles/Sidebar.module.scss
+++ b/src/Styles/Sidebar.module.scss
@@ -43,8 +43,8 @@
     transform: translateX(0);
 
     &__topSection{
-      height: 3.75rem;
-      padding: 1rem 1rem .75rem 1rem ;
+      height: $headerHeight;
+      padding: 0rem 1rem  ;
       display: flex;
       align-items: center;
       justify-content: space-between;
